Paquete de Ventanas
Paquete para las ventanas añadido
Añadida clase para elegir la ventana que mostrar

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,6 +1,3 @@
-/Ajustes$1.class
-/Ajustes.class
-/Principal$1.class
+/Ventanas/
 /Principal.class
-/Puntuaciones$1.class
-/Puntuaciones.class
+/Aplicacion.class
